# Project-SOL

./: .gitignore  CONTEXT.md  README.md  SETUP GUIDE.txt
.claude/: launch.json
files/: .gitignore  README.md  START_SOL.bat  install.sh  pyproject.toml  setup.sh  setup_windows.bat  sol.py  sol.toml
files/plugins/example_plugin/: plugin.py
files/src/sol/: __init__.py  __main__.py  app.py  config.py
files/src/sol/brain/: __init__.py  base.py  emotional.py  gemini_brain.py  llm_brain.py  ollama_brain.py  pattern_brain.py  personality.py  sentiment.py
files/src/sol/features/: __init__.py  export.py  journal.py  notes.py  reminders.py
files/src/sol/memory/: __init__.py  base.py  json_store.py  migration.py  models.py  sqlite_store.py
files/src/sol/plugins/: __init__.py  base_plugin.py  hooks.py  loader.py
files/src/sol/ui/: __init__.py  base.py  cli.py  colors.py  tui.py
files/src/sol/utils/: __init__.py  model_manager.py
files/src/sol/voice/: __init__.py  base.py  mac_say_tts.py  piper_tts.py  push_to_talk.py  pyttsx3_tts.py  vosk_stt.py  wake_word.py  whisper_stt.py
files/tests/: conftest.py  test_config.py  test_features.py  test_gemini_brain.py  test_mac_say_tts.py  test_memory_migration.py  test_memory_sqlite.py  test_ollama_brain.py  test_pattern_brain.py  test_plugins.py  test_push_to_talk.py  test_sentiment.py
